Fix unreadable text after creating dweet

--- a/dwitter/static/theme_green.css
+++ b/dwitter/static/theme_green.css
@@ -2,8 +2,9 @@ textarea {
   border: none;
 }
 
-ul.messages li{
-  border:1px solid #7cff76;
+ul.messages li.success {
+    background: #134802;
+    color: lime;
 }
 
 .dweet{
@@ -88,8 +89,6 @@ ul.messages li{
   border: none;
 }
 
-/* Dark-theme-specific properties */
-
 .head-menu a {
   color: #17ff00;
 }
@@ -124,7 +123,7 @@ body{
 
 .card{
  background: #4b4b4b;
- color:#7fff69;
+ color:#7aff63;
 }
 
 textarea#editor.code-input
@@ -176,7 +175,7 @@ div.dark-section
 .dweet-button
 {
   color:#043c00;
-  background: #96ff70;
+  background: #74ce54;
 }
 
 .function-wrap
